fix style channel visibility author and time

--- a/src/platform-apps/channels/styles.scss
+++ b/src/platform-apps/channels/styles.scss
@@ -244,7 +244,7 @@
           background-color: hsla(0, 0%, 100%, 0.03);
 
           .message__time {
-            visibility: visible;
+            display: block;
           }
         }
 
@@ -366,10 +366,10 @@
       }
 
       &__time {
+        display: none;
         font-size: 12px;
         color: theme.$font-color-time;
-        visibility: hidden;
-        padding-top: 8px;
+        padding-top: 6px;
         padding-right: 28px;
       }
 
@@ -380,7 +380,7 @@
       }
 
       &__author-avatar {
-        visibility: hidden;
+        display: none;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -401,7 +401,7 @@
         .message__time,
         .message__author-name,
         .message__author-avatar {
-          visibility: visible;
+          display: block;
         }
         .message__author-avatar {
           height: 32px;
